# convLife

./: README.md  deepq_utils.py  flake.nix  fullycon.py  game_of_life.py  interactive.py  main.ipynb  model.pt  plotting.py  pointpainter_model.py  pyproject.toml  reienforcement.ipynb  resnet.py
checkpoints/: policy-1mov-16x16-120epi.pth  policy-1mov-16x16.pth  policy-1mov-32x32-150epi.pth  policy2-1mov-32x32-200epi.pth
models/: autoencoder.py  fullycon.py  resnet.py
training/: deepq_utils.py  game_of_life.py  main.ipynb  pyproject.toml  reienforcement.ipynb
training/models/: simpLEnet.py
web/: index.html  package.json  vite.config.ts
web/public/: model.onnx  model8.onnx
web/src/: App.tsx  main.tsx  viridis.ts
web/src/components/: GameOfLifeEngine.ts  GameOfLifeVis.tsx  ModelRunner.ts  UseGameOfLife.ts  predictionVis.tsx
